--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -283,7 +283,7 @@
 	margin: 0;
 }
 
-.gif-search-content .gif-search-results {
+#buddypress .gif-search-content .gif-search-results {
 	padding: 0 10px;
 	overflow: auto;
 	min-height: 280px;
