UI fixes - group albums/photos

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
@@ -90,7 +90,7 @@
 
 		} // close .acomment-options
 
-		.activity-meta.action {
+		.bp-generic-meta.action {
 			background: none;
 			margin-top: $marg-sml;
 
