--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -269,7 +269,7 @@
 			}
 		}
 
-		.activity-meta.action {
+		.bp-generic-meta.action {
 			border: 1px solid transparent;
 			background: $off-white;
 			padding: 2px;
