--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -183,8 +183,7 @@
 .bp-messages-content {
 
 	.actions {
-		float: right;
-		max-width: 30%;
+		margin-left: auto;
 
 		.bp-icons:not(.bp-hide) {
 			display: inline-block;
@@ -210,12 +209,12 @@
 
 	.single-message-thread-header {
 		border-bottom: 1px solid $light-grey;
-
-		&:after {
-			clear: both;
-			content: "";
-			display: table;
-		}
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
 	}
 
 	.single-thread-title {
@@ -502,6 +501,7 @@ input#send-to-input {
 
 .messages-wrapper #subnav #compose-personal-li {
 	margin-left: auto;
+	margin-right: 10px;
 }
 
 #inbox {
@@ -606,6 +606,23 @@ input#send-to-input {
 	}
 }
 
+.bp-messages-form-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+    margin-bottom: 10px;
+}
+
+.bp-back-to-thread-list {
+    margin-right: 10px;
+}
+
 @include medium-up() {
 
 	.bp-messages-user-threads {
@@ -616,5 +633,35 @@ input#send-to-input {
 	#bp-message-thread-list {
 		max-height: 50vh;
 		overflow: auto;
+	}
+}
+
+@media screen and (min-width: 1080px) {
+	.bp-back-to-thread-list,
+	.bp-close-compose-form {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 1080px) {
+    .bp-messages-nav-panel {
+		flex: 0 0 100%;
+		border-right: 0;
+	}
+
+	.bp-messages-content {
+		display: none;
+	}
+
+	.bp-view-message,
+	.bp-compose-message {
+		.bp-messages-nav-panel {
+			display: none;
+		}
+
+		.bp-messages-content {
+			display: block;
+			padding-left: 0;
+		}
 	}
 }
