--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -565,6 +565,7 @@ body.buddypress article.page > .entry-header .entry-title {
 
 .buddypress-wrap .subnav-filters div button#user_messages_search_submit {
   padding: 7px 0.8em;
+  width: auto;
 }
 
 .buddypress-wrap .subnav-filters .component-filters {
@@ -3653,8 +3654,7 @@ body.register .buddypress-wrap .page ul {
 }
 
 .bp-messages-content .actions {
-  float: right;
-  max-width: 30%;
+  margin-left: auto;
 }
 
 .bp-messages-content .actions .bp-icons:not(.bp-hide) {
@@ -3673,12 +3673,12 @@ body.register .buddypress-wrap .page ul {
 
 .bp-messages-content .single-message-thread-header {
   border-bottom: 1px solid #eaeaea;
-}
-
-.bp-messages-content .single-message-thread-header:after {
-  clear: both;
-  content: "";
-  display: table;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .bp-messages-content .single-thread-title {
@@ -3934,6 +3934,7 @@ input#send-to-input {
 
 .messages-wrapper #subnav #compose-personal-li {
   margin-left: auto;
+  margin-right: 10px;
 }
 
 #inbox {
@@ -4038,6 +4039,23 @@ input#send-to-input {
   overflow: auto;
 }
 
+.bp-messages-form-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.bp-back-to-thread-list {
+  margin-right: 10px;
+}
+
 @media screen and (min-width: 46.8em) {
   .bp-messages-user-threads {
     max-height: 80vh;
@@ -4046,6 +4064,32 @@ input#send-to-input {
   #bp-message-thread-list {
     max-height: 50vh;
     overflow: auto;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .bp-back-to-thread-list,
+  .bp-close-compose-form {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .bp-messages-nav-panel {
+    flex: 0 0 100%;
+    border-right: 0;
+  }
+  .bp-messages-content {
+    display: none;
+  }
+  .bp-view-message .bp-messages-nav-panel,
+  .bp-compose-message .bp-messages-nav-panel {
+    display: none;
+  }
+  .bp-view-message .bp-messages-content,
+  .bp-compose-message .bp-messages-content {
+    display: block;
+    padding-left: 0;
   }
 }
 
